--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="page #home-page">
         <p class="title">Available Lamps</p>
-        <div class="grid">
-            <div class="object-button-container">
+        <div class="grid" id="lamp-container">
+            <!-- <div class="object-button-container">
                 <button class="object-button">
                     🔥
                 </button>
@@ -30,7 +30,7 @@
                     🔥
                 </button>
                 <p class="button-title">Lamp 3</p>
-            </div>
+            </div> -->
         </div>
         <p class="title">Global Settings</p>
         <a href="">Edit All Lamps</a>
@@ -109,5 +109,7 @@ a:visited {
 }
 
 </style>
+
+<script src="./script.js"></script>
 
 </html>
