--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@ a:visited {
 
 </style>
 
-<script src="./script.js"></script>
+<script src="https://raw.githubusercontent.com/Michel2003g/light-web-app/main/script.js"></script>
 
 </html>
