--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="">Edit All Lamps</a>
     </div>
 
-    <script src="https://raw.githubusercontent.com/Michel2003g/light-web-app/main/script.js"></script>
+    <script src="https://Michel2003g.github.io/light-web-app/script.js"></script>
 
 </body>
 
