--- a/edit.html
+++ b/edit.html
@@ -21,7 +21,7 @@
         <a href="">Edit All Lamps</a>
     </div>
 
-    <script src="./edit_script.js"></script>
+    <script src="https://Michel2003g.github.io/light-web-app/edit_script.js"></script>
 
 </body>
 
