--- a/index.html
+++ b/index.html
@@ -8,29 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://Michel2003g.github.io/light-web-app/style.css">
 </head>
 <body>
     <div class="page #home-page">
         <p class="title">Available Lamps</p>
         <div class="grid" id="lamp-container">
-            <!-- <div class="object-button-container">
-                <button class="object-button">
-                    🔥
-                </button>
-                <p class="button-title">Lamp 1</p>
-            </div>
-            <div class="object-button-container">
-                <button class="object-button">
-                    🔥
-                </button>
-                <p class="button-title">Lamp 2</p>
-            </div>
-            <div class="object-button-container">
-                <button class="object-button">
-                    🔥
-                </button>
-                <p class="button-title">Lamp 3</p>
-            </div> -->
+            <!-- buttons for lamps -->
         </div>
         <p class="title">Global Settings</p>
         <a href="">Edit All Lamps</a>
@@ -39,78 +24,5 @@
     <script src="https://Michel2003g.github.io/light-web-app/script.js"></script>
 
 </body>
-
-
-<style>
-
-html {
-    background-color: #0F0F0F;
-}
-
-* {
-    color: white;
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
-    margin: 8px 0px;
-}
-
-.page {
-    padding: 10px;
-}
-
-.grid {
-    display: grid;
-    grid-template-rows: 114px;
-    grid-auto-rows: 114px;
-    grid-template-columns: repeat(auto-fit, minmax(0px, 82px));
-    gap: 24px;
-
-    justify-items: center;
-    align-items: center;
-
-    margin: 12px 0px;
-}
-
-.title {
-    font-weight: 600;
-    font-size: 18px;
-}
-
-.button-title {
-    text-align: center;
-    margin: 4px;
-    font-size: 14px;
-    font-weight: 600;
-    color: #CCCCCC;
-}
-
-a {
-    color: #0EC9E6;
-    font-size: 12px;
-    font-weight: 600;
-}
-
-a:visited {
-    color: #0EC9E6;
-}
-
-.object-button-container {
-    width: fit-content;
-}
-
-.object-button {
-    background-color: #1C1C1C;
-    width: 82px;
-    border-radius: 8px;
-    border: #343434 solid 3px;
-    aspect-ratio:  1 / 1;
-
-    text-align: center;
-    vertical-align: middle;
-
-    font-size: 36px;
-}
-
-</style>
 
 </html>
