--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- buttons for lamps -->
         </div>
         <p class="title">Global Settings</p>
-        <a href="">Edit All Lamps</a>
+        <a href="./edit?lamp=-1">Edit All Lamps</a>
     </div>
 
     <script src="https://Michel2003g.github.io/light-web-app/script.js"></script>
