--- a/edit.html
+++ b/edit.html
@@ -13,11 +13,16 @@
 </head>
 <body>
     <div class="page #home-page">
-        <p class="title" id="page-title">[LAMP]</p>
+        <p class="title" id="page-title">Editing [LAMP]</p>
+
+        <p class="data-label ">Current Theme : <span id="current-theme">[ANY]</span></p>
+
         <p class="title">Lamp Themes</p>
         <div class="grid" id="theme-container">
             <!-- buttons for lamps -->
         </div>
+        <p class="title">Global Settings</p>
+        <a href="">Edit All Lamps</a>
     </div>
 
     <script src="https://Michel2003g.github.io/light-web-app/edit_script.js"></script>
