--- a/edit.html
+++ b/edit.html
@@ -15,7 +15,7 @@
     <div class="page #home-page">
         <p class="title" id="page-title">Editing [LAMP]</p>
 
-        <p class="data-label ">Light Enabled : <input type="checkbox" id="enabled-checkbox" onchange="setEnabled(this)"></p>
+        <p class="data-label ">Light Enabled : <input type="checkbox" id="enabled-checkbox"></p>
         <p class="data-label ">Current Theme : <span id="current-theme">[ANY]</span></p>
 
         <p class="title">Lamp Themes</p>
