--- a/edit.html
+++ b/edit.html
@@ -23,8 +23,10 @@
         <div class="grid" id="theme-container">
             <!-- buttons for lamps -->
         </div>
-        <p class="title">Global Settings</p>
-        <a href="">Edit All Lamps</a>
+        <p class="title">Available Settings</p>
+        <div class="grid" id="settings-container">
+            <!-- buttons for lamps -->
+        </div>
     </div>
 
     <script src="https://Michel2003g.github.io/light-web-app/colorPickerScript.js"></script>
