--- a/edit.html
+++ b/edit.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div class="page #home-page">
+        <a href="/" class="button">Back</a>
         <p class="title" id="page-title">Editing [LAMP]</p>
 
         <p class="data-label ">Light Enabled : <input type="checkbox" id="enabled-checkbox"></p>
